# yourscript-api

./: .dockerignore  .env.access_service.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
.config/: .env.example  .env.notes.example  dev.config.toml
.config/nginx/: nginx.conf
src/zametka/access_service/application/: authorize.py  create_user.py  delete_user.py  dto.py  get_user.py  verify_email.py
src/zametka/access_service/application/common/: id_provider.py  interactor.py  repository.py  token_sender.py  uow.py  user_gateway.py
src/zametka/access_service/application/common/event/: __init__.py  event.py  event_emitter.py  event_handler.py
src/zametka/access_service/application/common/exceptions/: base.py  repo_error.py  user.py
src/zametka/access_service/bootstrap/: conf.py  di.py
src/zametka/access_service/domain/common/: access_service.py  base_error.py  timed_user_token.py
src/zametka/access_service/domain/common/entities/: timed_user_token.py
src/zametka/access_service/domain/common/services/: access_service.py  password_hasher.py
src/zametka/access_service/domain/common/value_objects/: base.py  timed_token_id.py
src/zametka/access_service/domain/entities/: access_token.py  config.py  confirmation_token.py  user.py
src/zametka/access_service/domain/exceptions/: access_token.py  base.py  confirmation_token.py  password_hasher.py  user.py
src/zametka/access_service/domain/services/: password_hasher.py  token_access_service.py
src/zametka/access_service/domain/value_objects/: access_token_id.py  expires_in.py  user_email.py  user_hashed_password.py  user_id.py  user_raw_password.py
src/zametka/access_service/infrastructure/: error_code.py  id_provider.py
src/zametka/access_service/infrastructure/auth/: access_token_processor.py  id_provider.py  password_hasher.py
src/zametka/access_service/infrastructure/email/: aio_email_client.py  config.py  confirmation_token_processor.py  email_client.py  email_message.py  email_token_sender.py
src/zametka/access_service/infrastructure/event_bus/: amqp_event_sender.py  event_emitter.py  event_handler.py
src/zametka/access_service/infrastructure/event_bus/events/: __init__.py  amqp_event.py  integration_event.py  user.py
src/zametka/access_service/infrastructure/gateway/: user.py
src/zametka/access_service/infrastructure/gateway/converters/: user.py
src/zametka/access_service/infrastructure/jwt/: access_token_processor.py  config.py  confirmation_token_processor.py  exceptions.py  jwt_processor.py
src/zametka/access_service/infrastructure/message_broker/: __init__.py  config.py  message_broker.py  uow.py
src/zametka/access_service/infrastructure/persistence/: config.py  provider.py
src/zametka/access_service/infrastructure/persistence/alembic/: config.py
src/zametka/access_service/infrastructure/persistence/models/: __init__.py  user_identity.py
src/zametka/access_service/main/: conf.py  config_loader.py  di.py
src/zametka/access_service/presentation/: __init__.py  error_message.py
src/zametka/access_service/presentation/http/: config.py  exception_handlers.py  exceptions.py  http_error_code.py
src/zametka/access_service/presentation/http/auth/: config.py  token_auth.py
src/zametka/access_service/presentation/http/endpoints/: user.py
src/zametka/access_service/presentation/http/exception_handlers/: auth.py
src/zametka/access_service/presentation/http/jwt/: config.py  token_auth.py
src/zametka/access_service/presentation/http/schemas/: user.py
src/zametka/access_service/presentation/http/templates/: confirmation-mail.html
src/zametka/access_service/presentation/web_api/: config.py
src/zametka/access_service/presentation/web_api/endpoints/: user.py
src/zametka/access_service/presentation/web_api/exception_handlers/: auth.py
src/zametka/access_service/presentation/web_api/schemas/: user.py
src/zametka/main/: cli.py  web.py
src/zametka/notes/application/common/: id_provider.py  repository.py
src/zametka/notes/application/note/: dto.py  note_interactor.py
src/zametka/notes/application/user/: create_user.py  get_user.py
src/zametka/notes/domain/common/value_objects/: base.py
src/zametka/notes/domain/entities/: note.py  user.py
src/zametka/notes/domain/exceptions/: base.py
src/zametka/notes/domain/value_objects/note/: note_text.py  note_title.py
src/zametka/notes/infrastructure/: access_api_client.py  config_loader.py  id_provider.py
src/zametka/notes/infrastructure/db/: main.py  provider.py
src/zametka/notes/infrastructure/repositories/: note.py  user.py
src/zametka/notes/main/: ioc.py
src/zametka/notes/presentation/: __init__.py  interactor_factory.py
tests/mocks/access_service/: event_emitter.py  id_provider.py  token_sender.py  user_gateway.py  user_identity_repository.py
tests/unit/access_service/: conftest.py
tests/unit/access_service/application/interactors/: conftest.py  const.py  test_authorize.py  test_create_identity.py  test_delete_identity.py  test_get_identity.py  test_verify_email.py
tests/unit/access_service/domain/entities/: conftest.py  test_confirmation_token.py  test_timed_token.py  test_user.py
tests/unit/access_service/domain/services/: conftest.py  const.py  test_token_access_service.py
tests/unit/notes/domain/entities/: test_user.py
(+18 files in other folders)
